feat: enhance YouTubeTranscriptApi with caching and logging options, update types and examples

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "lint": "eslint \"{src,__tests__}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,__tests__}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"__tests__/**/*.ts\"",
+    "lint": "eslint \"{src,__tests__,examples}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,__tests__,examples}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\" \"examples/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"__tests__/**/*.ts\" \"examples/**/*.ts\"",
     "check": "pnpm lint && pnpm format:check && pnpm test",
     "check:all": "pnpm lint && pnpm format:check && pnpm test:coverage",
     "precommit": "pnpm check"
