--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
-    "html-entities": "^2.4.0"
+    "html-entities": "^2.4.0",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
